--- a/Project2.vcxproj
+++ b/Project2.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{ac4176f3-72d1-4636-ab3b-bab80a37c672}</ProjectGuid>
     <RootNamespace>Project2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>235 Project</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
